--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Brian Levin</title>
-        <link rel= "stylesheet" href= "css/style.css";
+        <link rel= "stylesheet" href= "css/style.css">
+         <link rel= "icon" href= "favicon.ico">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="" />
