--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
         <link rel="stylesheet" href="" />
     </head>
     <body>
-       
+       <h1>I am Brian</h1>
+       <p>a programmer </p>
+
+
         <script src="" async defer></script>
     </body>
 </html>
