added background color to div element and chagned the margin in the h1 and body tags

--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
         <link rel="stylesheet" href="" />
     </head>
     <body>
-       <h1>I am Brian</h1>
+    <!--  div= content division element divide content to seperate cotainers or boxes so you can affect the layout of each box-->
+    <div class = "">
+<h1>I am Brian</h1>
        <p>a programmer </p>
 
+    </div>
+       
 
         <script src="" async defer></script>
     </body>
