added 3 divs and gave this divs dimetnions and then played  with the dimentions in the dev tools

--- a/index.html
+++ b/index.html
@@ -13,9 +13,18 @@
     </head>
     <body>
     <!--  div= content division element divide content to seperate cotainers or boxes so you can affect the layout of each box-->
-    <div class = "">
+    <div class = "top-container">
 <h1>I am Brian</h1>
        <p>a programmer </p>
+
+    </div>
+
+ 
+    <div class = "middle-container">
+
+    </div>
+
+    <div class= "bottom-container">
 
     </div>
        
