--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <body>
     <!--  div= content division element divide content to seperate cotainers or boxes so you can affect the layout of each box-->
     <div class = "top-container">
-<h1>I am Brian</h1>
-       <p>a programmer </p>
-
+    <img src = "images/cloud.png" alt= "cloud-img">
+<h1>I am Brian</h1> <!--- h1, div,  p ul tags are considered block elements since they take up the whole page -->
+       <p>a <span class ="pro">pro</span>grammer</p>
+ <img src = "images/cloud.png" alt= "cloud-img">
+  <img src = "images/mountain.png" alt= "mountain-img">
     </div>
 
  
