added notes and comepleted in-block challenge in code penn by working with the relative position of the elements

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <body>
     <!--  div= content division element divide content to seperate cotainers or boxes so you can affect the layout of each box-->
     <div class = "top-container">
+<!--   html default rules, content, order of code, children sit on top fo parentz, are how styling and content is going to be displayed on the page-->
+    <!-- block, take up entire page, inline, take up part of page, inline block- best of both worlds can manipulate the height and width while staying on the same line-->
     <img src = "images/cloud.png" alt= "cloud-img">
 <h1>I am Brian</h1> <!--- h1, div,  p ul tags are considered block elements since they take up the whole page -->
-       <p>a <span class ="pro">pro</span>grammer</p>
+       <p>a <span class ="pro">pro</span>grammer</p> <!--Span to target a specific part of the sentence  span elements are inline display elements that only take up as much space as they ned to in height, inline elemnets = span, images and anchors and wdith-->
  <img src = "images/cloud.png" alt= "cloud-img">
   <img src = "images/mountain.png" alt= "mountain-img">
     </div>
