implemented css sizing using pixels, percents ems, and rems for each selected tag

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- block, take up entire page, inline, take up part of page, inline block- best of both worlds can manipulate the height and width while staying on the same line-->
     <img class= "top-cloud" src = "images/cloud.png" alt= "cloud-img">
 <h1>I'm Brian</h1> <!--- h1, div,  p ul tags are considered block elements since they take up the whole page -->
-       <p>a <span class ="pro">pro</span>grammer</p> <!--Span to target a specific part of the sentence  span elements are inline display elements that only take up as much space as they ned to in height, inline elemnets = span, images and anchors and wdith-->
+       <h2>a <span class ="pro">pro</span>grammer</h2> <!--Span to target a specific part of the sentence  span elements are inline display elements that only take up as much space as they ned to in height, inline elemnets = span, images and anchors and wdith-->
  <img class="bottom-cloud"  src = "images/cloud.png" alt= "cloud-img">
   <img src = "images/mountain.png" alt= "mountain-img">
     </div>
