changed the CSS properties in the skills row and added temporary images and changed with property within images

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- block, take up entire page, inline, take up part of page, inline block- best of both worlds can manipulate the height and width while staying on the same line-->
     <img class= "top-cloud" src = "images/cloud.png" alt= "cloud-img">
 <h1>I'm Brian</h1> <!--- h1, div,  p ul tags are considered block elements since they take up the whole page -->
-       <h2>a <span class ="pro">pro</span>grammer</h2> <!--Span to target a specific part of the sentence  span elements are inline display elements that only take up as much space as they ned to in height, inline elemnets = span, images and anchors and wdith-->
+       <h>a <span class ="pro">pro</span>grammer</h> <!--Span to target a specific part of the sentence  span elements are inline display elements that only take up as much space as they ned to in height, inline elemnets = span, images and anchors and wdith-->
  <img class="bottom-cloud"  src = "images/cloud.png" alt= "cloud-img">
   <img src = "images/mountain.png" alt= "mountain-img">
     </div>
@@ -36,12 +36,12 @@
   <div class="skills">
     <h2>My Skills.</h2>
     <div class="skill-row">
-      <img class="" src="" alt="">
+      <img class="computer" src="images/computer.png" alt="computer">
       <h3>Lorem & Ipsum</h3>
       <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
     </div>
     <div class="skill-row">
-      <img class="" src="" alt="">
+      <img class="chillies" src="images/chillies.png" alt="chillies">
       <h3>Lorem Ipsum Dolor</h3>
       <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
     </div>
