--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- block, take up entire page, inline, take up part of page, inline block- best of both worlds can manipulate the height and width while staying on the same line-->
     <img class= "top-cloud" src = "images/cloud.png" alt= "cloud-img">
 <h1>I'm Brian</h1> <!--- h1, div,  p ul tags are considered block elements since they take up the whole page -->
-       <h>a <span class ="pro">pro</span>grammer</h> <!--Span to target a specific part of the sentence  span elements are inline display elements that only take up as much space as they ned to in height, inline elemnets = span, images and anchors and wdith-->
+       <h2>a <span class ="pro">pro</span>grammer</h2> <!--Span to target a specific part of the sentence  span elements are inline display elements that only take up as much space as they ned to in height, inline elemnets = span, images and anchors and wdith-->
  <img class="bottom-cloud"  src = "images/cloud.png" alt= "cloud-img">
   <img src = "images/mountain.png" alt= "mountain-img">
     </div>
@@ -30,28 +30,29 @@
   <div class="profile">
     <img src="" alt="">
     <h2>Hello.</h2>
-    <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+    <p class= "intro">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
   </div>
   <hr>
   <div class="skills">
-    <h2>My Skills.</h2>
+    <h2 class= "skills-title">My Skills.</h2>
     <div class="skill-row">
       <img class="computer" src="images/computer.png" alt="computer">
       <h3>Lorem & Ipsum</h3>
-      <p class= "code-skill-description">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+      <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
     </div>
     <div class="skill-row">
       <img class="chillies" src="images/chillies.png" alt="chillies">
-      <h3>Lorem Ipsum Dolor</h3>
-      <p class= "chilli-skill-description"> Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+      <h3 class= "hot-wings">Lorem Ipsum Dolor</h3>
+      <p> Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
     </div>
   </div>
   <hr>
   <div class="contact-me">
     <h2>Get In Touch</h2>
     <h3 >Lorem ipsum dolor sit amet, non elit.</h3>
-    <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+    <p class = "contact-message">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
     <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+    <a href="#" class="BUTTON_ZPQ">CONTACT ME</a>
   </div>
 </div>
 
