--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <h2>Get In Touch</h2>
     <h3 >Lorem ipsum dolor sit amet, non elit.</h3>
     <p class = "contact-message">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-    <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
-    <a href="#" class="BUTTON_ZPQ">CONTACT ME</a>
+  
+    <a href="bml201095@gmail.com" class="BUTTON_ZPQ">CONTACT ME</a>
   </div>
 </div>
 
