--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="profile">
     <img src="" alt="">
     <h2>Hello.</h2>
-    <p class= "intro">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+    <p class= "intro"> I am  A  software developer. I'm a recent full stack web development boot camp graduate and continue to self-study to sharpen my skills.  I Love fitness and workout everyday! </p>
   </div>
   <hr>
   <div class="skills">
@@ -38,19 +38,19 @@
     <div class="skill-row">
       <img class="computer" src="images/computer.png" alt="computer">
       <h3>Lorem & Ipsum</h3>
-      <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+      <p> I started to code in 2018 but I really started to get into developing software in 2020. I have gained enough experience where I can make full stack web applications</p>
     </div>
     <div class="skill-row">
       <img class="chillies" src="images/chillies.png" alt="chillies">
-      <h3 class= "hot-wings">Lorem Ipsum Dolor</h3>
-      <p> Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+      <h3 class= "hot-wings">Health and Fitness</h3>
+      <p>  I have been into Health and Fitness my whole life.  I am  a nut when it comes to health and fitnesss</p>
     </div>
   </div>
   <hr>
   <div class="contact-me">
     <h2>Get In Touch</h2>
-    <h3 >Lorem ipsum dolor sit amet, non elit.</h3>
-    <p class = "contact-message">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+    <h3 >If you want to run a million miles with me and cook meals</h3>
+    <p class = "contact-message">Love to workout and cook as much as I do? lets talk and get together! We can code while we run in place! (We don't have to do that but coding would be fun!) </p>
   
     <a href="bml201095@gmail.com" class="BUTTON_ZPQ">CONTACT ME</a>
   </div>
