--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <hr>
   <div class="contact-me">
     <h2>Get In Touch</h2>
-    <h3 >If you want to run a million miles with me and cook meals</h3>
+    <h3 >If you want to run a million miles with me and cook  healthy meals.</h3>
     <p class = "contact-message">Love to workout and cook as much as I do? lets talk and get together! We can code while we run in place! (We don't have to do that but coding would be fun!) </p>
   
     <a href="bml201095@gmail.com" class="BUTTON_ZPQ">CONTACT ME</a>
