added new image and changed image class name

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <p> I started to code in 2018 but I really started to get into developing software in 2020. I have gained enough experience where I can make full stack web applications</p>
     </div>
     <div class="skill-row">
-      <img class="chillies" src="images/chillies.png" alt="chillies">
+      <img class="muscle" src="images/muscle.png" alt="chillies">
       <h3 class= "hot-wings">Health and Fitness</h3>
       <p>  I have been into Health and Fitness my whole life.  I am  a nut when it comes to health and fitnesss</p>
     </div>
@@ -50,7 +50,7 @@
   <div class="contact-me">
     <h2>Get In Touch</h2>
     <h3 >If you want to run a million miles with me and cook  healthy meals.</h3>
-    <p class = "contact-message">Love to workout and cook as much as I do? lets talk and get together! We can code while we run in place! (We don't have to do that but coding would be fun!) </p>
+    <p class = "contact-message">Love to workout and cook as much as I do? Lets talk and get together! We can code while we run in place! (We don't have to do that but coding would be fun!) </p>
   
     <a href="bml201095@gmail.com" class="BUTTON_ZPQ">CONTACT ME</a>
   </div>
