--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
     <h2 class= "skills-title">My Skills.</h2>
     <div class="skill-row">
       <img class="computer" src="images/computer.png" alt="computer">
-      <h3>Lorem & Ipsum</h3>
+      <h3>Web Development</h3>
       <p> I started to code in 2018 but I really started to get into developing software in 2020. I have gained enough experience where I can make full stack web applications</p>
     </div>
     <div class="skill-row">
       <img class="muscle" src="images/muscle.png" alt="chillies">
       <h3 class= "hot-wings">Health and Fitness</h3>
-      <p>  I have been into Health and Fitness my whole life.  I am  a nut when it comes to health and fitnesss</p>
+      <p>  Health and fitness has been a major part of my life.  I really enjoy staying active and healthy</p>
     </div>
   </div>
   <hr>
@@ -61,7 +61,7 @@
   <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
   <a class="footer-link" href="https://twitter.com/">Twitter</a>
   <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-  <p class = "copy-right">© 2018 Name Surname.</p>
+  <p class = "copy-right">© 2021  Brian Levin.</p>
 </div>
 
         <script src="" async defer></script>
