added a contact page

--- a/index.html
+++ b/index.html
@@ -50,17 +50,20 @@
   <div class="contact-me">
     <h2>Get In Touch</h2>
     <h3 >If you want to run a million miles with me and cook  healthy meals.</h3>
-    <p class = "contact-message">Love to workout and cook as much as I do? Lets talk and get together! We can code while we run in place! (We don't have to do that but coding would be fun!) </p>
+
+    
+    <p class = "contact-message">Love to workout and cook as much as I do? Lets talk and get together! </p>
   
     <a href="bml201095@gmail.com" class="BUTTON_ZPQ">CONTACT ME</a>
+    
   </div>
 </div>
 
 
 <div class="bottom-container">
   <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-  <a class="footer-link" href="https://twitter.com/">Twitter</a>
-  <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+  
+  <a class="footer-link" href="https://brian-react-portfolio.herokuapp.com/">Portfolio</a>
   <p class = "copy-right">© 2021  Brian Levin.</p>
 </div>
 
