added ome styling to my Contact page

--- a/contact.html
+++ b/contact.html
@@ -13,12 +13,13 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
+    <div class = "top-container">
     <h1>Contact details</h1>
     <link rel= "stylesheet" href= "css/style.css";
         <ul>
            <p>Number: 610-937-6248</p>
            <p> Email: bml201095@gmail.com</p>
-<hr>
+
 <form action = "mailto:bml201095@gmail.com" method= "post" enctype= "text/plain">
 
 <label>Your Name</label>
@@ -35,6 +36,7 @@
 
 </form>
         </ul>
+        </div>
 
 
         
