--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     
     <p class = "contact-message">Love to workout and cook as much as I do? Lets talk and get together! </p>
   
-    <a href="bml201095@gmail.com" class="BUTTON_ZPQ">CONTACT ME</a>
+    <a href="contact.html" class="BUTTON_ZPQ">CONTACT ME</a>
     
   </div>
 </div>
