added a footer to contact page

--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,13 @@
         </ul>
         </div>
 
+<div class="bottom-container">
+  <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+  
+  <a class="footer-link" href="https://brian-react-portfolio.herokuapp.com/">Portfolio</a>
+  <p class = "copy-right">© 2021  Brian Levin.</p>
+</div>
+
 
         
         <script src="" async defer></script>
